force-app/main/default/objects/Quote/fields/Original_Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_Currency__c</fullName>
    <label>Original Opportunity Currency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>