force-app/main/default/objects/Quote/fields/Original_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order Id</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>