force-app/main/default/objects/Quote/fields/Original_Quote__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Renewal/Amendment Quotes</relationshipLabel>
    <relationshipName>Renewal_Amendment_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>