force-app/main/default/objects/Quote/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Should be &apos;Primary&apos; Contact. Not required on Quote.</description>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Partner)</relationshipLabel>
    <relationshipName>Quotes_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>