force-app/main/default/objects/Quote/fields/Partner_Place__c.field-meta.xml
<CustomField>
    <fullName>Partner_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to partner or distributor place</description>
    <inlineHelpText>Select the place of the partner involved in this quote</inlineHelpText>
    <label>Partner Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes (Partner Place)</relationshipLabel>
    <relationshipName>Quotes6</relationshipName>
    <type>Lookup</type>
</CustomField>