force-app/main/default/objects/Quote/fields/Partner_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Partner_Pricing_Model__c</fullName>
    <description>The partner pricing model to apply for this quote.</description>
    <inlineHelpText>Guaranteed Margin: All partner margins are summed and applied. Discount: Only billing partner discount applies.</inlineHelpText>
    <label>Partner Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed Margin</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>