force-app/main/default/objects/Quote/fields/Partner_Pricing_Model_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Pricing_Model_Source__c</fullName>
    <description>Tracks how the Partner Pricing Model was set - either automatically based on partner defaults or manually overridden by user</description>
    <inlineHelpText>Shows whether the pricing model was automatically set from partner defaults or manually selected</inlineHelpText>
    <label>Partner Pricing Model Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Set</fullName>
            </value>
            <value>
                <fullName>User Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>