force-app/main/default/objects/Quote/fields/Payment_Portal__c.field-meta.xml
<CustomField>
    <fullName>Payment_Portal__c</fullName>
    <description>Defaults to Fortra (i.e. direct payment). Allows users to indicate transactions that will be billed via a 3rd party portal vs. email delivery.</description>
    <label>Payment Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fortra (default)</fullName>
                <default>true</default>
                <label>Fortra (default)</label>
            </value>
            <value>
                <fullName>AWS Marketplace</fullName>
            </value>
            <value>
                <fullName>Ariba</fullName>
            </value>
            <value>
                <fullName>Coupa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>