force-app/main/default/objects/Quote/fields/Perpetual_Pricing_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Pricing_Discount_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perpetual Pricing Discount Approval</label>
    <type>Checkbox</type>
</CustomField>