force-app/main/default/objects/Quote/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <description>The client&apos;s Purchase Order number for this Quote.</description>
    <label>PO Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>