force-app/main/default/objects/Quote/fields/Primary_Place__c.field-meta.xml
<CustomField>
    <fullName>Primary_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary reference place for this quote</description>
    <inlineHelpText>Select the primary or default place for this quote</inlineHelpText>
    <label>Primary Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes (Primary Place)</relationshipLabel>
    <relationshipName>Quotes7</relationshipName>
    <type>Lookup</type>
</CustomField>