force-app/main/default/objects/Quote/fields/Pro_Rated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rated_Amount__c</fullName>
    <description>The calculated pro-rated charge or credit for this amendment based on the effective date and remaining contract term.</description>
    <inlineHelpText>The pro-rated amount to be charged or credited for this amendment.</inlineHelpText>
    <label>Pro-Rated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>