force-app/main/default/objects/Quote/fields/Pro_Ration_Method__c.field-meta.xml
<CustomField>
    <fullName>Pro_Ration_Method__c</fullName>
    <description>Method used to calculate pro-rated charges for this amendment. Determines how partial period charges are calculated.</description>
    <inlineHelpText>Select how pro-rated charges should be calculated for this amendment.</inlineHelpText>
    <label>Pro-Ration Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Full Period</fullName>
            </value>
            <value>
                <fullName>No Pro-ration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>