force-app/main/default/objects/Quote/fields/Quote_Displaced_ARR__c.field-meta.xml
<CustomField>
    <fullName>Quote_Displaced_ARR__c</fullName>
    <label>Quote Displaced ARR</label>
    <summarizedField>QuoteLineItem.Displaced_ARR_Input__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Displaced_ARR_Input__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>