force-app/main/default/objects/Quote/fields/Quote_NARR__c.field-meta.xml
<CustomField>
    <fullName>Quote_NARR__c</fullName>
    <label>Quote NARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>