force-app/main/default/objects/Quote/fields/QuoteTypeText__c.field-meta.xml
<CustomField>
    <fullName>QuoteTypeText__c</fullName>
    <formula>TEXT(Quote_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteTypeText</label>
    <type>Text</type>
</CustomField>