force-app/main/default/objects/Quote/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The referral partner for this quote. Participates in Guaranteed Margin pricing.</description>
    <inlineHelpText>Select the referral partner if applicable.</inlineHelpText>
    <label>Referral Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Referral Partner)</relationshipLabel>
    <relationshipName>Quotes_Referral_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>