force-app/main/default/objects/Quote/fields/Regulatory_Place__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to place for regulatory compliance purposes</description>
    <inlineHelpText>Select the place that determines regulatory requirements and compliance</inlineHelpText>
    <label>Regulatory Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes (Regulatory Place)</relationshipLabel>
    <relationshipName>Quotes5</relationshipName>
    <type>Lookup</type>
</CustomField>