force-app/main/default/objects/Quote/fields/Renewal_ARR_Approval__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ARR_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal ARR Approval</label>
    <type>Checkbox</type>
</CustomField>