force-app/main/default/objects/Quote/fields/Renewal_ARR_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ARR_Credit_Amount__c</fullName>
    <label>Renewal ARR Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>