force-app/main/default/objects/Quote/fields/Renewal_Cancellation_Approval__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Cancellation Approval</label>
    <type>Checkbox</type>
</CustomField>