force-app/main/default/objects/Quote/fields/Renewal_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>