force-app/main/default/objects/Quote/fields/Renewal_Value__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Value__c</fullName>
    <label>Renewal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>