force-app/main/default/objects/Quote/fields/Request_Legal_Support__c.field-meta.xml
<CustomField>
    <fullName>Request_Legal_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Legal Support?</label>
    <type>Checkbox</type>
</CustomField>