force-app/main/default/objects/Quote/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The reseller partner for this quote. Participates in Guaranteed Margin pricing.</description>
    <inlineHelpText>Select the reseller partner if applicable.</inlineHelpText>
    <label>Reseller</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not match the filter criteria. The selected account must be marked as Partner.</errorMessage>
        <filterItems>
            <field>Account.Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Reseller)</relationshipLabel>
    <relationshipName>Quotes_Reseller</relationshipName>
    <type>Lookup</type>
</CustomField>