force-app/main/default/objects/Quote/fields/Service_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Service_Max_Discount__c</fullName>
    <label>Service Max Discount</label>
    <summarizedField>QuoteLineItem.Discount</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Fortra_Product_Type__c</field>
        <operation>contains</operation>
        <value>Service</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>