force-app/main/default/objects/Quote/fields/Service_Place__c.field-meta.xml
<CustomField>
    <fullName>Service_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to where services will be performed</description>
    <inlineHelpText>Select the place where services will be delivered or performed</inlineHelpText>
    <label>Service Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes (Service Place)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>