force-app/main/default/objects/Quote/fields/Services_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Services_Discount_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services Discount Approval</label>
    <type>Checkbox</type>
</CustomField>