force-app/main/default/objects/Quote/fields/Ship_To_Place__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the shipping destination for products in this quote</description>
    <inlineHelpText>Select the place where products should be delivered</inlineHelpText>
    <label>Ship To Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes (Ship To Place)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>