force-app/main/default/objects/Quote/fields/Show_Hide_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Show_Hide_Discounts__c</fullName>
    <description>Indicates whether to print this item on a Quote document.</description>
    <label>Show/Hide Discounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
                <default>true</default>
                <label>Show</label>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>