force-app/main/default/objects/Quote/fields/Show_Hide_Signature_Block__c.field-meta.xml
<CustomField>
    <fullName>Show_Hide_Signature_Block__c</fullName>
    <label>Show/Hide Signature Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>