force-app/main/default/objects/Quote/fields/Signed_Quote__c.field-meta.xml
<CustomField>
    <fullName>Signed_Quote__c</fullName>
    <label>Signed Quote?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Unsigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>