force-app/main/default/objects/Quote/fields/Signed_Quote_Approval__c.field-meta.xml
<CustomField>
    <fullName>Signed_Quote_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Quote Approval</label>
    <type>Checkbox</type>
</CustomField>