force-app/main/default/objects/Quote/fields/Subscription_Pricing_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Pricing_Discount_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Pricing Discount Approval</label>
    <type>Checkbox</type>
</CustomField>