force-app/main/default/objects/Quote/fields/Temp_License_Key_Extension__c.field-meta.xml
<CustomField>
    <fullName>Temp_License_Key_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp License Key Extension?</label>
    <type>Checkbox</type>
</CustomField>