force-app/main/default/objects/Quote/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unlocks the Custom Text box to make edits.  Validates whether the quote can have custom text.</description>
    <inlineHelpText>Please check this box to make edits to the Custom Text field.</inlineHelpText>
    <label>Enable Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>