force-app/main/default/objects/Quote/fields/Total_Contract_Value_TCV__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value_TCV__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Value (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>