force-app/main/default/objects/Quote/fields/Total_Displaced_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Displaced_ARR__c</fullName>
    <description>Roll-up summary of Displaced Annual Recurring Revenue from all Quote Line Items. Represents the total ARR being replaced, upgraded, or converted by this Quote. Used in the calculation: New Deal ALE - Displaced ARR = Incremental ALE (Commissionable Amount).</description>
    <label>Total Displaced ARR</label>
    <summarizedField>QuoteLineItem.Displaced_ARR__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>