force-app/main/default/objects/Quote/fields/Total_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_Services__c</fullName>
    <label>Total Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>