force-app/main/default/objects/Quote/fields/Total_Software__c.field-meta.xml
<CustomField>
    <fullName>Total_Software__c</fullName>
    <label>Total Software</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>