force-app/main/default/objects/Quote/fields/Total_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscription__c</fullName>
    <label>Total Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>