force-app/main/default/objects/Quote/fields/TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscount__c</fullName>
    <description>Total discount percentage applied to the quote</description>
    <inlineHelpText>Total discount percentage applied to the quote</inlineHelpText>
    <label>Total Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>