force-app/main/default/objects/Quote/fields/Unsigned_Quote_Approval__c.field-meta.xml
<CustomField>
    <fullName>Unsigned_Quote_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsigned Quote Approval</label>
    <type>Checkbox</type>
</CustomField>