force-app/main/default/objects/Quote/fields/Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>Validation_Result__c</fullName>
    <label>Validation Result</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>