force-app/main/default/objects/Quote/validationRules/Amendment_Requires_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Amendment_Requires_Contract</fullName>
    <active>true</active>
    <description>Requires Amendment quotes to be linked to the original Contract being amended.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Quote_Type__c, &apos;Amendment&apos;),
    ISBLANK(Renewal_Contract__c)
)</errorConditionFormula>
    <errorDisplayField>Renewal_Contract__c</errorDisplayField>
    <errorMessage>Amendment quotes must be linked to the original Contract being amended.</errorMessage>
</ValidationRule>