force-app/main/default/objects/Quote/validationRules/Enforce_Amendment_Sales_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Amendment_Sales_Restriction</fullName>
    <active>true</active>
    <description>Prevents Sales users from creating non-upsell/cross-sell amendments within 120 days of the contract renewal date. Only Customer Operations can process amendments during this window.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Quote_Type__c, &apos;Amendment&apos;),
    Within_Renewal_Window__c = TRUE,
    NOT(
        OR(
            ISPICKVAL(Amendment_Reason__c, &apos;Upsell&apos;),
            ISPICKVAL(Amendment_Reason__c, &apos;Cross-sell&apos;)
        )
    ),
    NOT(CONTAINS($UserRole.Name, &apos;Customer Ops&apos;)),
    NOT(CONTAINS($UserRole.Name, &apos;Operations&apos;))
)</errorConditionFormula>
    <errorDisplayField>Amendment_Reason__c</errorDisplayField>
    <errorMessage>This contract is within 120 days of renewal. Sales users cannot create downsell or cancellation amendments during this period. Please contact Customer Operations for assistance.</errorMessage>
</ValidationRule>