force-app/main/default/objects/Quote/validationRules/Require_Amendment_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Amendment_Reason</fullName>
    <active>true</active>
    <description>Requires Amendment Reason to be populated when Quote Type is Amendment.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Quote_Type__c, &apos;Amendment&apos;),
    ISBLANK(TEXT(Amendment_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Amendment_Reason__c</errorDisplayField>
    <errorMessage>Amendment Reason is required for all amendment quotes.</errorMessage>
</ValidationRule>