force-app/main/default/objects/Quote/validationRules/Sales_Cannot_Create_Downsell.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Cannot_Create_Downsell</fullName>
    <active>true</active>
    <description>Prevents Sales users from creating downsell or cancellation amendments. Only Customer Operations can process these amendment types.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Quote_Type__c, &apos;Amendment&apos;),
    OR(
        ISPICKVAL(Amendment_Reason__c, &apos;Downsell&apos;),
        ISPICKVAL(Amendment_Reason__c, &apos;Full Cancellation&apos;)
    ),
    NOT(CONTAINS($UserRole.Name, &apos;Customer Ops&apos;)),
    NOT(CONTAINS($UserRole.Name, &apos;Operations&apos;))
)</errorConditionFormula>
    <errorDisplayField>Amendment_Reason__c</errorDisplayField>
    <errorMessage>Downsell and Cancellation amendments can only be created by Customer Operations. Please contact Customer Operations for assistance.</errorMessage>
</ValidationRule>