force-app/main/default/objects/Quote/listViews/AE_Quote.listView-meta.xml
<ListView>
    <fullName>AE_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>AE</label>
    <queue>AE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>