force-app/main/default/objects/Quote/listViews/CCO_Proxy_CFO_CEO_Quote.listView-meta.xml
<ListView>
    <fullName>CCO_Proxy_CFO_CEO_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>CCO/Proxy &amp; CFO/CEO</label>
    <queue>CCO_Proxy_CFO_CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>