force-app/main/default/objects/Quote/listViews/CCO_Proxy_Quote.listView-meta.xml
<ListView>
    <fullName>CCO_Proxy_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>CCO/Proxy</label>
    <queue>CCO_Proxy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>