force-app/main/default/objects/Quote/listViews/CFO_CEO_Quote.listView-meta.xml
<ListView>
    <fullName>CFO_CEO_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>CFO/CEO</label>
    <queue>CFO_CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>