force-app/main/default/objects/Quote/listViews/CRO_Proxy_Quote.listView-meta.xml
<ListView>
    <fullName>CRO_Proxy_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>CRO/Proxy</label>
    <queue>CRO_Proxy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>