force-app/main/default/objects/Quote/listViews/Cyber_COps_Quote.listView-meta.xml
<ListView>
    <fullName>Cyber_COps_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Cyber COps</label>
    <queue>Cyber_COps</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>