force-app/main/default/objects/Quote/listViews/Cyber_Finance_Quote.listView-meta.xml
<ListView>
    <fullName>Cyber_Finance_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Cyber Finance</label>
    <queue>Cyber_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>