force-app/main/default/objects/Quote/listViews/Cyber_LT_CRO_Proxy_Quote.listView-meta.xml
<ListView>
    <fullName>Cyber_LT_CRO_Proxy_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Cyber LT &amp; CRO/Proxy</label>
    <queue>Cyber_LT_CRO_Proxy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>