force-app/main/default/objects/Quote/listViews/Cyber_LT_Quote.listView-meta.xml
<ListView>
    <fullName>Cyber_LT_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Cyber LT</label>
    <queue>Cyber_LT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>