force-app/main/default/objects/Quote/listViews/Cyber_LT_Rev_Rec_Quote.listView-meta.xml
<ListView>
    <fullName>Cyber_LT_Rev_Rec_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Cyber LT/Rev Rec</label>
    <queue>Cyber_LT_Rev_Rec</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>