force-app/main/default/objects/Quote/listViews/Deal_Desk_Approver_Quote.listView-meta.xml
<ListView>
    <fullName>Deal_Desk_Approver_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Deal Desk Approver</label>
    <queue>Deal_Desk_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>