force-app/main/default/objects/Quote/listViews/GM_EVP_Quote.listView-meta.xml
<ListView>
    <fullName>GM_EVP_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>GM/EVP</label>
    <queue>GM_EVP</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>